feat: removed minio (#30)
